objects/ASI_CRM_ID_Card__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_SG_Outlet__c</fullName>
        <label>Outlet</label>
        <referenceTo>ASI_CRM_AccountsAdditionalField__c</referenceTo>
        <relationshipLabel>ID Cards</relationshipLabel>
        <relationshipName>ID_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Total_Annual_Volume__c</fullName>
        <label>Total Annual Volume</label>
        <summarizedField>ASI_CRM_ID_Card_Volume__c.ASI_CRM_SG_Annual_Volume__c</summarizedField>
        <summaryForeignKey>ASI_CRM_ID_Card_Volume__c.ASI_CRM_SG_ID_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SG_Total_Super_Ultra_Brands__c</fullName>
        <label>Total Super and Ultra Premium Brands</label>
        <summarizedField>ASI_CRM_ID_Card_Volume__c.ASI_CRM_SG_No_Super_Ultra_Premium_Brands__c</summarizedField>
        <summaryForeignKey>ASI_CRM_ID_Card_Volume__c.ASI_CRM_SG_ID_Card__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>ID Card</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_CRM_SG_Outlet__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>IDC-{0000}</displayFormat>
        <label>Nº. ID Card</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ID Cards</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_MY_ID_Card</fullName>
        <active>true</active>
        <label>ASI CRM MY ID Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_SG_ID_Card</fullName>
        <active>true</active>
        <label>ASI CRM SG ID Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TH_ID_Card</fullName>
        <active>true</active>
        <label>ASI CRM TH ID Card</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_CRM_TW_ID_Card</fullName>
        <active>true</active>
        <label>ASI CRM TW ID Card</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>